2.3.1
-----
1. Update some translations.
2. Set Smart rules 'files added in the last days' limit to 10*365

2.3.0
-----
 1. Only disable system tray support if org.kde.StatusNotifierWatcher is not
    registered when running under Gnome.
 2. Add ability to change grid cover size - Ctrl+ / Ctrl-
 3. Avahi support (automatic mpd discovery)
 4. Make serving of files to MPD via HTTP configurable.
 5. If set to only transcode if source is different, or lossless, then only
    change extension if song is actually transcoded.
 6. Use a combo box for 'Transcode if...' options.
 7. Work-around Windows font issues.
 8. If dynamic playlists helper does not start, show link to wiki page
    detailing perl dependencies.
 9. Add "Add Local Files" to playqueue context menu.
10. Add support for Haiku - thanks to miqlas
11. Remember last loaded/saved playlist name - and use this as the default
    name when saving.
12. Fix MPRIS length field.
13. Add option to show bitrate, sample rate, and format in toolbar.
14. Add support for forked-DAAP - thanks to Wolfgang Scherer.
15. Add checkbox to indicate that server auto-updates when files changed.
    Thanks to Wolfgang Scherer.
16. Add GUI option to control volume step.
17. Add command-line options to set debugging and to disable network access.
18. Reduce memory usage by correctly calculating cost of covers for in-memory
    cache.
19. Make it possible to filter on year (or range of years) in library and
    playqueue search fields.
20. Add filename and path to table style playqueue and playlist columns.
21. Adjust library search debounce based upon number of tracks in DB.
22. Fix potential issue with missing covers when switching collections.
23. Fix opening Cantata maximized under Windows if the info view is in the
    sidebar.
24. Use IO::Socket::IP and not IO::Socket::INET in cantata-dynamic to allow
    usage with IPv6. Thanks to Peter Marschall
25. Improve appearance of scrollbar in play queue, and context view, under