@@ -2,6 +2,7 @@
 -----
 1. Update some translations.
 2. Set Smart rules 'files added in the last days' limit to 10*365
+3. Only sort playlists in folders view, and place these after tracks.
 
 2.3.0
 -----
